Fixed broken links

--- a/fics/250713 The Roaring Fraud.html
+++ b/fics/250713 The Roaring Fraud.html
@@ -4,7 +4,7 @@
         <title>Page Title</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="/styles.css" />
 
         <!--- fonts --->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -20,7 +20,7 @@
     <body>
         <div class="container">
             <div class="header">
-                <a href="/index.html"> NXTEQUAL <img src="Assets/car.gif" /></a>
+                <a href="/index.html"> NXTEQUAL <img src="/Assets/car.gif" /></a>
             </div>
             <div class="siteurl" id="url">
                 <script>
@@ -30,19 +30,19 @@
 
             <div class="navi">
                 <ul class="navi">
-                    <li class="navi"><a href="about.html">About</a></li>
-                    <li class="navi"><a href="archive.html">Archive</a></li>
-                    <li class="navi"><a href="resources.html">Resources</a></li>
-                    <li class="navi"><a href="outlinks.html">Outlinks</a></li>
+                    <li class="navi"><a href="/about.html">About</a></li>
+                    <li class="navi"><a href="/archive.html">Archive</a></li>
+                    <li class="navi"><a href="/resources.html">Resources</a></li>
+                    <li class="navi"><a href="/outlinks.html">Outlinks</a></li>
                     <li class="navi"><a href="/">WIP</a></li>
-                    <li class="navi"><a href="credits.html">Credits</a></li>
+                    <li class="navi"><a href="/credits.html">Credits</a></li>
                 </ul>
             </div>
 
             <div class="content">
                 <div class="title">banner <img src="/Assets/cross.png" alt="x" height="10" class="cross" /></div>
                 <div class="box">
-                    <img src="Assets/banner.jpg" width="100%" />
+                    <img src="/Assets/banner.jpg" width="100%" />
                 </div>
 
                 <div class="title">
@@ -169,17 +169,17 @@
                     <img src="/Assets/cross.png" alt="x" height="10" class="cross" />
                 </div>
                 <div class="box">
-                  <p>Read on <a href="archiveofourown.org/works/67460826">Archive of our Own</a>.</p>
+                  <p>Read on <a href="https://archiveofourown.org/works/67460826">Archive of our Own</a>.</p>
                   
                   <p>Written July 2025.</p>
                   
                     Layout inspired by <a href="http://itinerae.neocities.org" target="_blank">Itinerae</a> and recoded
                     by me.
                     <p></p>
-                    <img src="Assets/ie_animated.gif" /><img src="Assets/adobe_mwm_fla.gif" />
+                    <img src="/Assets/ie_animated.gif" /><img src="/Assets/adobe_mwm_fla.gif" />
                 </div>
 
-                <img src="Assets/volkswagen-2000.gif" width="100%" />
+                <img src="/Assets/volkswagen-2000.gif" width="100%" />
             </div>
 
             <div class="sidebar">
@@ -190,7 +190,7 @@
                 <div class="box">
                     <a href="https://tamanotchi.world/24234c"
                         ><img src="https://tamanotchi.world/i2/24234" alt="It's tamaNOTchi! Click to feed!" /></a
-                    ><img src="Assets/Pippins_battle_idle.gif" />
+                    ><img src="/Assets/Pippins_battle_idle.gif" />
                 </div>
 
                 <div class="title">
@@ -198,8 +198,8 @@
                     <img src="/Assets/cross.png" alt="x" height="10" class="cross" />
                 </div>
                 <div class="box">
-                    <img src="Assets/tumblrpocalypse_button_6.png" />
-                    <img src="Assets/delete-twitter.gif" />
+                    <img src="/Assets/tumblrpocalypse_button_6.png" />
+                    <img src="/Assets/delete-twitter.gif" />
                     <a href="http://users3.smartgb.com/g/g.php?a=s&i=g36-38873-44"
                         ><img alt="Guestbook" src="http://extras3.smartgb.com/b/gb_80x40.gif"
                     /></a>
@@ -229,7 +229,8 @@
                 </div>
                 <div class="box">
                     <div>
-                        [20250709] Rewrote code
+                        [20250713] Added Archive page
+                        <br>[20250709] Rewrote code
                         <br />[20250627] Site created
                     </div>
                 </div>
