hopefully fixed fic page and centred

--- a/archive.html
+++ b/archive.html
@@ -61,7 +61,7 @@
                     
                   <h2>Fanfiction</h2>
                   <ul>
-                  <li><a href="/fics/250713 The Roaring Fraud.html">[T] The Roaring Fraud <i>(Deltarune)</i></a></li>
+                  <li><a href="/fics/250713_The_Roaring_Fraud.html" target="_blank">[T] The Roaring Fraud <i>(Deltarune)</i></a></li>
                   <li>[M] Cathode Ray Rituals <i>(Deltarune)</i></li>
                   </ul>
                 
