updated css & about

--- a/about.html
+++ b/about.html
@@ -63,14 +63,9 @@
 
                     <p>
                         My hobbies include art, computers, cars, videogames, RPGs, horror, films and TV shows, food,
-                        crafts, cosplay... I consider myself quite a varied person and can talk about anything.
+                        crafts, cosplay... I'm a pretty boring person though.
                     </p>
 
-                    <p>
-                        What about my deeper interests? I'm a deep lover of art in all its forms. I'm Buddhist and it's
-                        an intrinsic part of me and what I put into my work. As you can see from my site I'm heavily
-                        into retro grunge and what I like to call "junkcore". Join my movement!
-                    </p>
 
                     <h3>Find Me</h3>
                     <p>
@@ -120,11 +115,27 @@
                 </div>
 
                 <div class="title">
-                    INTERESTS
+                    DATA
                     <img src="/Assets/cross.png" alt="x" height="10" class="cross" />
                 </div>
                 <div class="box">
                     <div><b>NAME:</b> NXT or Hal <br /><b>AGE:</b> 27 <br><b>PRNS:</b> he/him <br><b>WHERE:</b> UK</div>
+                </div>
+                
+                
+                <div class="title">
+                    INTERESTS
+                    <img src="/Assets/cross.png" alt="x" height="10" class="cross" />
+                </div>
+                <div class="box">
+                    <div>
+                        <ul>
+                            <li><strong>Transformers</strong></li>
+                            <li>Deltarune</li>
+                            <li>RPGs</li>
+                            <li>Crafts</li>
+                        </ul>
+                    </div>
                 </div>
 
                 <div class="title">
@@ -133,8 +144,9 @@
                 </div>
                 <div class="box">
                     <div>
-                        [20250709] Rewrote code
-                        <br />[20250627] Site created
+                        [250804] Updated about
+                        <br>[250709] Rewrote code
+                        <br />[250627] Site created
                     </div>
                 </div>
             </div>
