--- a/archive.html
+++ b/archive.html
@@ -129,8 +129,9 @@
                 </div>
                 <div class="box">
                     <div>
-                        [20250709] Rewrote code
-                        <br />[20250627] Site created
+                        [250804] Updated about
+                        <br>[250709] Rewrote code
+                        <br />[250627] Site created
                     </div>
                 </div>
             </div>
