--- a/fics/250713_The_Roaring_Fraud.html
+++ b/fics/250713_The_Roaring_Fraud.html
@@ -229,9 +229,9 @@
                 </div>
                 <div class="box">
                     <div>
-                        [20250713] Added Archive page
-                        <br>[20250709] Rewrote code
-                        <br />[20250627] Site created
+                         [250804] Updated about
+                        <br>[250709] Rewrote code
+                        <br />[250627] Site created
                     </div>
                 </div>
             </div>
